[package]
name = "mina-fdv-rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
graphql_client = "0.9.0"
rust_decimal = "1.14"
rust_decimal_macros = "1.14"
mina-graphql-rs = { git = "https://github.com/zkvalidator/mina-graphql-rs" }
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = { version = "0.2.74", features = ["serde-serialize"] }
wasm-bindgen-futures = { version = "0.4.24" }

[lib]
crate-type = ["cdylib"]
